fix styling on smaller device

--- a/src/routes/About Us/AboutUs.styles.scss
+++ b/src/routes/About Us/AboutUs.styles.scss
@@ -4,5 +4,78 @@
 	&-overlay {
 		position: absolute;
 		inset: 0;
+
+		img {
+			width: 391px;
+			height: 415px;
+
+			@media screen and (max-width: 650px) {
+				width: 80%;
+				height: 320px;
+			}
+		}
+	}
+
+	&-content {
+		width: 100%;
+		z-index: 2;
+
+		&_about {
+			flex: 1;
+			display: flex;
+			justify-content: flex-end;
+			align-items: flex-end;
+			flex-direction: column;
+
+			text-align: right;
+
+			p {
+				margin: 2rem 0;
+				color: var(--color-grey);
+
+				@media screen and (max-width: 2000px) {
+					margin: 4rem 0;
+				}
+			}
+		}
+
+		&_knife {
+			margin: 2rem 4rem;
+
+			img {
+				height: 910px;
+
+				@media screen and (max-width: 2000px) {
+					height: 1110px;
+				}
+			}
+			@media screen and (max-width: 900px) {
+				margin: 4rem 0;
+			}
+		}
+
+		&_history {
+			flex: 1;
+			display: flex;
+			justify-content: flex-start;
+			align-items: flex-start;
+			flex-direction: column;
+			text-align: left;
+
+			p {
+				margin: 2rem 0;
+				color: var(--color-grey);
+
+				@media screen and (max-width: 2000px) {
+					margin: 4rem 0;
+				}
+			}
+		}
+
+		@media screen and (max-width: 900px) {
+			flex-direction: column;
+		}
 	}
 }
+
+
